...
                    .foregroundColor(.gray)
                    .padding(.bottom, 8)
                
                Text(currentQuestion.question)
                    .font(.title2)

                TextField("Your answer", text: $viewModel.currentAnswer)
                    .textFieldStyle(RoundedBorderTextFieldStyle())
                    .padding()

                HStack {
                    Button("Previous") {
                        viewModel.moveToPreviousQuestion()
...
                        if viewModel.isCurrentQuestionSubmitted {
                            Text("Already submitted")
                                .padding()
                                .foregroundColor(.gray)
                                .font(.body)
                        } else {
                            Text("Submit")
                                .padding()
                        }
                    }
                    .disabled(viewModel.isSubmitButtonDisabled || viewModel.isCurrentQuestionSubmitted)

                    Spacer()
...
